--- a/index.html
+++ b/index.html
@@ -8,78 +8,53 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
   :root{
+    /* Paleta fija para botones/series (NO aleatoria) */
+    --yes:#87cefa;          /* AZUL para "Aquí sí" */
+    --meh:#8a5adf;          /* MORADO para "Me da igual" */
+    --no:#ff7aa3;           /* ROSA para "Pasando" */
 
-    /* Fondo base y tipografía */
-html, body { height: 100%; }
-body{
-  margin: 0;
-  background: linear-gradient(180deg, var(--bg-light) 0%, var(--bg-mid) 100%);
-  color: var(--ink);
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", sans-serif;
-}
-
-    /* Paleta fija para botones/series */
-  --yes: #87cefa;    /* AZUL para "Aquí sí" */
-  --meh: #8a5adf;    /* MORADO para "Me da igual" */
-  --no: #ff7aa3;     /* ROSA para "Pasando" */
-
-  /* Variables de tema aleatorio */
-  --ink: #333;
-  --bg-light: #fff7fb;
-  --bg-mid: #ffe3ef;
-  --bg-dark: #d38cb1;
-  --card-bg: #ffffffee;
-  --accent-1: #d7a6f1;
-  --accent-2: #b48ad6;
-
-  /* Kanji flotante */
-  --kanji-color: #b38cb1; /* más oscuro que el fondo */
-  --kanji-size-min: 12px;
-  --kanji-size-max: 32px;
-  --kanji-opacity-min: 0.15;
-  --kanji-opacity-max: 0.35;
-}
-
-/* ===== Fondo con kanji aleatorios ===== */
-#kanji-bg {
-  position: fixed;
-  inset: 0;
-  z-index: 0;           /* visible sobre el fondo del <body> */
-  pointer-events: none;
-  overflow: hidden;
-}
-
-/* Todo el contenido normal por encima de la capa 0 */
-body > div:not(#kanji-bg) {
-  position: relative;
-  z-index: 1;
-}
-
-  .kanji {
-    position: absolute;
-    font-family: 'Yuji Syuku', serif;
-    font-size: 20px;
-    color: rgba(211,140,177,0.6);
-    user-select: none;
-    animation-name: fall;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
+    /* Variables de tema aleatorio */
+    --ink:#333;
+    --bg-light:#fff7fb;
+    --bg-mid:#ffe3ef;
+    --bg-dark:#d38cb1;
+    --card-bg:#ffffffee;
+    --accent-1:#d7a6f1;
+    --accent-2:#b48ad6;
+    --petal-rgba: 255,182,193;
   }
 
-  @keyframes fall {
-    0% {
-      top: -5%;
-      transform: rotate(0deg);
-      opacity: 0.8;
-    }
-    50% {
-      transform: rotate(10deg);
-    }
-    100% {
-      top: 100%;
-      transform: rotate(20deg);
-      opacity: 0;
-    }
+  /* ===== Fondo temático ===== */
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    color: var(--ink);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: var(--bg-light);
+    position: relative;
+    overflow-x: hidden;
+  }
+  body::before, body::after{
+    content:"";
+    position: fixed;
+    inset: 0;
+    pointer-events:none;
+    background-image:
+      radial-gradient(14px 9px at 10px 10px, rgba(var(--petal-rgba),0.25) 40%, transparent 41%),
+      radial-gradient(12px 8px at 40% 30%, rgba(var(--petal-rgba),0.18) 40%, transparent 41%),
+      radial-gradient(10px 7px at 70% 60%, rgba(var(--petal-rgba),0.15) 40%, transparent 41%),
+      radial-gradient(12px 8px at 85% 20%, rgba(var(--petal-rgba),0.18) 40%, transparent 41%);
+    animation: petals 24s linear infinite;
+    filter: blur(0.2px);
+    z-index: -1;
+  }
+  body::after{ animation-duration: 32s; opacity: .6; }
+  @keyframes petals {
+    0% { background-position: 0 -10vh, 20vw -20vh, 60vw -15vh, 85vw -25vh; }
+    100% { background-position: 0 120vh, 20vw 130vh, 60vw 125vh, 85vw 135vh; }
   }
 
   h1, h2, h3 { font-family: 'Yuji Syuku', serif; text-align: center; }
@@ -291,9 +266,7 @@ body > div:not(#kanji-bg) {
 </style>
 </head>
 <body>
-  
-<div id="kanji-bg"></div>
-  
+
 <!-- Pantalla de inicio -->
 <div id="start-screen">
   <div style="text-align:center">
@@ -911,37 +884,5 @@ body > div:not(#kanji-bg) {
   applyRandomTheme();
   document.getElementById("start-screen").style.display = "flex";
 </script>
-
-<script>
-  const kanjis = ["花","桜","夢","風","月","光","心","雪","星","海"];
-const kanjiLayer = document.getElementById("kanji-bg");
-
-  function createKanji() {
-    const span = document.createElement("span");
-    span.className = "kanji";
-    span.textContent = kanjis[Math.floor(Math.random()*kanjis.length)];
-    span.style.left = Math.random()*100 + "vw";
-    span.style.fontSize = 16 + Math.random()*20 + "px";
-
-    // caída lenta y variada
-    const duration = 10 + Math.random()*15; // de 10 a 25s
-    span.style.animationDuration = duration + "s";
-    span.style.transform = `rotate(${Math.random()*40-20}deg)`; // rotación aleatoria inicial
-    container.appendChild(span);
-
-    span.addEventListener('animationend', () => span.remove());
-  }
-
-  // crear kanji cada 600ms para un efecto más ligero
-  setInterval(createKanji, 600);
-</script>
-
 </body>
 </html>
-
-
-
-
-
-
-
